# timer

./: CMakeLists.txt  GlibToolChain.cmake  README  config.h.in
gui/: CMakeLists.txt  gui.c  gui.h  window.c  window.h
main/: CMakeLists.txt  main.c
